kubernetes/efk-logging.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kibana-public
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: null
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: efk
  name: kibana
spec:
  ports:
    - port: 5601
  selector:
    app: efk
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: efk
  template:
    metadata:
      labels:
        app: efk
    spec:
      containers:
        - env:
            - name: ELASTICSEARCH_URL
              value: http://kibana:changeme@elasticsearch:9200
          name: kibana
          image: docker.elastic.co/kibana/kibana:5.5.1
          ports:
            - containerPort: 5601
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: efk
  name: elasticsearch
spec:
  ports:
    - port: 9200
  selector:
    app: efk
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: efk
  template:
    metadata:
      labels:
        app: efk
    spec:
      containers:
        - name: es
          image: docker.elastic.co/elasticsearch/elasticsearch:5.5.1
          ports:
            - containerPort: 9200
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: fluentd
spec:
  selector:
    matchLabels:
      app: efk
  template:
    metadata:
      labels:
        app: efk
      name: fluentd
    spec:
      containers:
        - name: fluentd
          image: gcr.io/google_containers/fluentd-elasticsearch:1.3
          volumeMounts:
            - name: varlog
              mountPath: /varlog
            - name: containers
              mountPath: /var/lib/docker/containers
      volumes:
        - hostPath:
            path: /var/log
          name: varlog
        - hostPath:
            path: /var/lib/docker/containers
          name: containers
